ansible/Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inquiry-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: inquiry-app

  template:
    metadata:
      labels:
        app: inquiry-app
      annotations:
        date: Date
    spec:
      containers:
        - name: inquiry-app
          image: samadhangapat/inquiryms:latest
          ports:
            - containerPort: 8081
          imagePullPolicy: Always
      restartPolicy: Always

...
