ansible/AppService.yml
---
apiVersion: v1
kind: Service
metadata:
  name: inquiry-app
spec:
  selector:
    app: inquiry-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30080  # Choose an available port
    

...
